--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                 </span>
 -->
                 <span class="link-block">
-                  <a href="link" class="external-link button is-normal is-rounded is-dark" title="Code">
+                  <a href="https://github.com/xiaobiaodu/RGS" class="external-link button is-normal is-rounded is-dark" title="Code">
                     <span class="icon">
                         <i class="fab fa-github"></i>
                     </span>
-                    <span>Code [coming soon]</span>
+                    <span>Code</span>
                     </a>
                 </span>
 
